2005-10-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in:
	Added 'th' (Thai) to ALL_LINGUAS.

2005-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-migrate.c : Small typo. Fixes #302378

2005-09-28  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-store.c (make_folder_info): Strip the semicolon
	from the uri. And also create the folder path properly.
	* storage/exchange-component.c (impl_upgradeFromVersion)
	(config_listener_account_created): Create the account_filename
	separately now.
	(exchange_component_get_account_for_uri): Synchronise the rescan tree
	with a lock
	* storage/exchange-config-listener.c (update_foreign_uri)
	(migrate_foreign_hierarchy)(ex_set_relative_uri) : Added new
	(migrate_account_esource) : Update the new relative uri.
	(exchange_config_listener_migrate_esources) : Take care of foreign uri
	as well.

2005-09-28  Arunprakash  <arunp@novell.com>

	* mail/mail-stub-exchange.c (append_message) : Unread flag has to be
	explicitly set for unread messages. Exchange server assumes read as
	default for appended messages.
	** Fixes #239641.

2005-09-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object): Fix a
	memory leak. Fixes #314019

2005-09-16  Irene Huang <Irene.Huang@sun.com>

	* camel/Makefile.am: Removed KRB5_LIBS from libcamelexchange_la_LIBADD.
	* configure.in: Removed the Kerberos section for KRB5 configurations.
	* docs/reference/Makefile.am: Removed KRB5_LIBS from GTKDOC_LIBS.
	* storage/Makefile.am: Remove KRB5_CFLAGS from -DG_LOG_DOMAIN, KRB5_LIBS	from evolution_exchange_storage_LDADD, ximian_connector_setup_LDADD and
	migr_test_LDADD.

2005-09-15  Arunprakash  <arunp@novell.com>

	* camel/camel-exchange-folder.c (exchange_expunge) : Checks for
	offline mode and returns an error.
	** Fixes #272987.

2005-09-13  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* configure.in: Added 'fa' (Persian) to ALL_LINGUAS.
